[gd_scene load_steps=24 format=2]

[ext_resource path="res://Sprite/effect/ATK_player/BFX003_01.png" type="Texture" id=1]
[ext_resource path="res://Sprite/effect/ATK_player/BFX003_03.png" type="Texture" id=2]
[ext_resource path="res://Sprite/effect/ATK_player/BFX003_02.png" type="Texture" id=3]
[ext_resource path="res://script/ghost/ATK/BulletH3.gd" type="Script" id=4]
[ext_resource path="res://Sprite/effect/Lightning/Lightning_beginning1.png" type="Texture" id=5]
[ext_resource path="res://Sprite/effect/Lightning/Lightning_end3.png" type="Texture" id=6]
[ext_resource path="res://Sprite/effect/Lightning/Lightning_beginning3.png" type="Texture" id=7]
[ext_resource path="res://Sprite/effect/Lightning/Lightning_beginning4.png" type="Texture" id=8]
[ext_resource path="res://Sprite/effect/Lightning/Lightning_cycle1.png" type="Texture" id=9]
[ext_resource path="res://Sprite/effect/Lightning/Lightning_cycle5.png" type="Texture" id=10]
[ext_resource path="res://Sprite/effect/Lightning/Lightning_end1.png" type="Texture" id=11]
[ext_resource path="res://Sprite/effect/Lightning/Lightning_beginning5.png" type="Texture" id=12]
[ext_resource path="res://Sprite/effect/Lightning/Lightning_cycle6.png" type="Texture" id=13]
[ext_resource path="res://Sprite/effect/Lightning/Lightning_cycle3.png" type="Texture" id=14]
[ext_resource path="res://Sprite/effect/Lightning/Lightning_beginning2.png" type="Texture" id=15]
[ext_resource path="res://Sprite/effect/Lightning/Lightning_cycle4.png" type="Texture" id=16]
[ext_resource path="res://Sprite/effect/Lightning/Lightning_end2.png" type="Texture" id=17]
[ext_resource path="res://Sprite/effect/Lightning/Lightning_cycle2.png" type="Texture" id=18]
[ext_resource path="res://sound/ghost_shoot.wav" type="AudioStream" id=19]
[ext_resource path="res://sound/thunder.wav" type="AudioStream" id=20]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 9.0
height = 64.0

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 15 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 12 ), ExtResource( 9 ), ExtResource( 18 ), ExtResource( 14 ), ExtResource( 16 ), ExtResource( 10 ), ExtResource( 13 ), ExtResource( 11 ), ExtResource( 17 ), ExtResource( 6 ) ],
"loop": true,
"name": "ATK",
"speed": 5.0
} ]

[node name="BulletH3" type="Area2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 4 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
speed_scale = 3.0
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -3, -1 )
rotation = -1.5708
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AnimatedSprite2" type="AnimatedSprite" parent="."]
position = Vector2( -5, -110 )
frames = SubResource( 3 )
animation = "ATK"
frame = 3
speed_scale = 2.0
playing = true

[node name="shoot_sound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 19 )

[node name="lightning" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 20 )

[connection signal="body_entered" from="." to="." method="_on_BulletH3_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_BulletH3_body_exited"]
[connection signal="animation_finished" from="AnimatedSprite2" to="." method="_on_AnimatedSprite2_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite2" to="." method="_on_AnimatedSprite2_frame_changed"]
